[package]
name = "pebbles-game-gear-academy"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
scale-info.workspace = true
parity-scale-codec.workspace = true
pebbles-game-io.workspace = true
rand.workspace = true
getrandom.workspace = true

[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.4.1" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.4.1" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.4.1" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.4.1" }
gtest = "1.3.0"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
pebbles-game-io.path = "io"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
gear-wasm-builder.workspace = true
pebbles-game-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
